# PrepSmart

./: .bandit  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AZURE_DEPLOYMENT.md  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT_READY.md  FRONTEND_COMPLETE.md  LATEST_UPDATES.md  README.md  SECURITY.md  SUBMISSION_READY.md  deploy-azure.sh  package-lock.json  setup.sh  test-detailed-debug.spec.js  test-ticker-simple.spec.js
.github/workflows/: security.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .env.temp  Dockerfile  debug_viewer.html  pyproject.toml  requirements-dev.txt  requirements.txt  test_end_to_end.py
backend/src/agents/: base_agent.py  coordinator_agent.py  documentation_agent.py  financial_advisor_agent.py  resource_locator_agent.py  risk_assessment_agent.py  supply_planning_agent.py  video_curator_agent.py
backend/src/api/: app.py  database.py  routes.py
backend/src/models/: agent_log.py  blackboard.py  crisis_profile.py
backend/src/services/: blackboard_service.py  cache_service.py  claude_client.py  location_service.py
backend/src/utils/: config.py  logger.py  validators.py
docs/: AZURE_DEPLOYMENT.md  DEMO_SCRIPT_2MIN.md  DEPLOY_NOW.md  FINAL_STATUS.md  GITHUB_SECRETS.md  IMPORTANT_MUST_CREATE_NEW_TASK.md  MVP_STATUS.md  NEXT_STEPS.md  PHASE3_COMPLETE.md  PRODUCTION_URLS.md  QUICK_START.md  RESOURCES_UPDATE.md  ROOT_CAUSE_ANALYSIS.md  SECURITY_HARDENING.md  SESSION_SUMMARY.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  test-api.html  ticker-test-standalone.html
scripts/: setup-security.sh
tests/: test-agent-status.spec.js  test-economic-flow.spec.js  test-full-flow.spec.js  test-message-ticker.spec.js  test-results-only.spec.js
(+30 files in other folders)
